<resources>
    <string name="app_name">Login - Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar">Agregar</string>
    <string name="agregarPeli">Agregar Pelicula</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar Cambios</string>
    <string name="eliminar">Eliminar</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="nombre">Nombre:</string>
    <string name="genero">Genero:</string>
    <string name="a_o">Año:</string>
    <string name="aceptar">Aceptar</string>
    <string name="nombre_">Nombre:</string>
    <string name="genero_">Genero:</string>
    <string name="a_o_">Año:</string>
    <string name="editar">editar</string>
    <string name="borrar">borrar</string>

</resources>