<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantalla"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d2a54"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/borders"
        android:backgroundTint="#1d2a54"
        android:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders"
            android:backgroundTint="#111c40"
            android:backgroundTintMode="multiply"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/borders"
                android:backgroundTint="#7e7e7e"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="Correo" />

            <EditText
                android:id="@+id/Contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/borders"
                android:backgroundTint="#7e7e7e"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:autofillHints="Contraseña" />
        </LinearLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#545454"
            android:text="@string/login"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/Logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#545454"
            android:text="@string/logout"
            app:cornerRadius="15dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>