<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pantallaFragmento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192123"
    tools:context=".AgregarPelicula">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/borders"
                    android:backgroundTint="#f2e8cf"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        app:boxBackgroundColor="#FFF"
                        app:boxStrokeColor="#FFF"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nombreM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/borders"
                            android:backgroundTint="#79998e"
                            android:hint="@string/nombre"
                            android:minWidth="300dp"
                            android:textColor="#C8C8C8"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        app:boxBackgroundColor="#FFF"
                        app:boxStrokeColor="#FFF"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/generoM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/borders"
                            android:backgroundTint="#79998e"
                            android:hint="@string/genero"
                            android:minWidth="200dp"
                            android:textColor="#C8C8C8"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        app:boxBackgroundColor="#FFF"
                        app:boxStrokeColor="#FFF"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/añoM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/borders"
                            android:backgroundTint="#79998e"
                            android:hint="@string/a_o"
                            android:inputType="number"
                            android:minWidth="100dp"
                            android:textColor="#C8C8C8"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#6ad3aa"
                    android:text="@string/aceptar"
                    android:textColor="@color/black"
                    app:cornerRadius="10dp" />

                <Button
                    android:id="@+id/cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#ef233c"
                    android:text="@string/cancelar"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>