<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/borders"
            android:backgroundTint="#00495C"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/borders"
                android:backgroundTint="#00495C"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeColor="#FFF"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borders"
                        android:backgroundTint="#005C74"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/nombre_"
                        android:minWidth="300dp"
                        android:textColor="#C8C8C8"
                        android:textColorHint="#E1BEE7" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    app:boxBackgroundColor="#FFF"
                    app:boxStrokeColor="#FFF"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/genero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/borders"
                        android:backgroundTint="#005C74"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/genero_"
                        android:minWidth="200dp"
                        android:textColor="#C8C8C8"
                        android:textColorHint="#E1BEE7" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="0.9"
                        app:boxBackgroundColor="#FFF"
                        app:boxStrokeColor="#FFF"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/año"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/borders"
                            android:backgroundTint="#005C74"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/a_o_"
                            android:minWidth="100dp"
                            android:textColor="#C8C8C8"
                            android:textColorHint="#E1BEE7" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/editar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="0.005"
                        android:clickable="true"
                        android:contentDescription="@string/editar"
                        app:backgroundTint="#000000"
                        app:fabCustomSize="30dp"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        app:tint="#C8C8C8"
                        android:focusable="true" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/eliminar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_weight="0.005"
                        android:clickable="true"
                        android:contentDescription="@string/borrar"
                        app:backgroundTint="#000000"
                        app:fabCustomSize="30dp"
                        app:srcCompat="@android:drawable/ic_menu_delete"
                        app:tint="#C8C8C8"
                        tools:ignore="TouchTargetSizeCheck"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>